Add mhairi content

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                 <h1 class="about-title">Hey Ya!</h1>
                 <h2 class="logo-2">I'm Mhairi Todd</h2>
                 <p class="sect-title about-text">
-                    I'm here to help you quit the stress and find success on your own terms.
+                    I will help you discover your confidence, tap into your power and find success on your own terms                
                 </p>
             </div>
             
@@ -81,33 +81,40 @@
 
     <!-- hero section -->
     <section class="about-detail">
-        <h1 class="about-detail-title sect-title">I went from burnt out & unmotivated to...<span class="fw-b">Fired</span></h1>
-        <h3 class="about-detail-subtitle sect-subtitle">Then unemployed, even more unmotivated and desperate. But, the story doesn't end there.</h3>
+        <h1 class="about-detail-title sect-title">I WENT FROM OUTWARDLY HAVING IT ALL BUT INWARDLY ANXIOUS & FULL OF SELF DOUBT TO…. <span class="fw-b">DIVORCED</span></h1>
+        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME.  I’D FAILED AT SOMETHING REALLY IMPORTANT. AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
         <hr class="pink-hr" data-aos="fade-slide-left">
         <div class="about-detail-content">
-            <p class="normal-text">
-                Artisan poke you probably haven't heard of them, lyft aesthetic roof party bitters pickled pork belly 
-                ethical farm-to-table banh mi activated charcoal fam. Intelligentsia artisan fingerstache affogato VHS kogi. 
-                Skateboard yuccie celiac, bushwick cardigan hell of lo-fi glossier ennui subway tile chia whatever single-origin 
-                coffee sartorial. Hella pork belly craft beer, marfa XOXO actually venmo pinterest williamsburg pitchfork paleo
-                 sriracha knausgaard 90's. Pour-over kitsch synth try-hard coloring book hoodie snackwave actually. Direct trade 
-                 cliche edison bulb Pour-over kitsch synth try-hard coloring book hoodie snackwave actually. Direct trade 
-                 cliche edison bulb Pour-over kitsch synth try-hard coloring book hoodie snackwave actually. Direct trade 
-                 cliche edison bulb
-            </p>
-            <p class="normal-text">
-                Schlitz keffiyeh meditation gentrify fingerstache, craft beer typewriter selfies activated charcoal lumbersexual. 
-                Thundercats skateboard shabby chic slow-carb direct trade. Sustainable cray tote bag bitters portland. Man bun
-                 heirloom live-edge DIY cloud bread. Coloring book lyft cloud bread hammock biodiesel sriracha quinoa chicharrones
-                  mustache kogi tacos pickled XOXO. Plaid affogato lomo, truffaut subway tile quinoa vaporware +1.slow-carb direct trade. 
-                  Sustainable cray tote bag bitters portland. Man bun
-                  heirloom live-edge DIY cloud bread. Coloring book lyft cloud bread hammock biodiesel sriracha quinoa chicharrones
-                   mustache kogi tacos pickled XOXO. Plaid affogato lomo, truffaut subway tile quinoa vaporware +1.
-            </p>
+            <div class="first-col">
+                <p class="normal-text">
+                    There I was, early 30’s, divorced, in a career which supposedly ticked all the boxes but didn’t tick mine and feeling like total sh&t about myself.  I had no self worth and no idea how to change that.
+                </p>
+                <p class="normal-text">
+                    The real work started from within.  My unhappiness was nothing to do with the actions I was taking.  I’d previously lived by the ‘feel the fear and do it anyway’ mantra which was insanely effective in keeping me progressing, but totally ineffective in living a happy, purposeful, powerful life!
+                </p>
+                
+                <p class="normal-text">
+                    So I did something very different for me. I made the decision to work on me. I invested in me with no outcome expected other than I would undoubtedly be in a better place than I started. 
+                </p>
+            </div>
+            <div class="second-col">
+                <p class="normal-text">
+                    And you know what happened? It only bloody worked! I started to make choices from an authentic place rather than a superficial one.  I changed jobs to a company with a heart and purpose more aligned with what I stood for. More importantly I turned down a Directorship and ridiculous salary to make that change. And it felt good! 
+                </p> 
+                <p class="normal-text">
+                    I started a diploma in life coaching because I supported the ethos.  I loved the idea of helping people step beyond their psychology and leap forward into their dream life. I met an incredible partner and we had a beautiful baby boy even though I’d previously been terrified about how having children might affect my ‘success’ in my career….  The positive, life fulfilling, incredible magic stuff just kept coming.  All because I had actually spent the time, effort and energy in the one place it seemed most alien to: <strong>on myself</strong>. 
+                </p>
+                <!-- <p class="normal-text">
+                    So, that’s a nice story, but how does that help you? 
+                    Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
+                    I also know that I can help you change all that and more. 
+                </p> -->
+            </div>
         </div>
         <p class="about-detail-quote">
-            "Beard jianbing listicle PBR&B, messenger bag bicycle rights snackwave small batch bitters stumptown hella. 
-            VHS you probably haven't heard of them tofu freegan,"
+            So, that’s a nice story, but how does that help you? 
+            Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
+            I also know that I can help you change all that and more. 
         </p>
     </section>
     <!-- END: hero section -->
