--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <!-- hero section -->
     <section class="home-hero container-fluid p-0">
         <div class="home-hero-img hero-showing">
-            <img src="static/img/core-img/coffee.jpeg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/Y31A1153 lo res.jpg" alt="Woman with coffee">
         </div>
         <div class="home-hero-img">
-            <img src="static/img/core-img/woman-sit-table.jpeg" alt="Woman sitting on table">
+            <img src="static/img/Mhairi_pics/mhairi_door.jpg" alt="Woman sitting on table">
         </div>
         <div class="home-hero-text">
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
@@ -91,7 +91,7 @@
             </h2>
         </div>
         <div class="home-about-img">
-            <img src="static/img/core-img/mhairi_garden.jpg" alt="Mhairi-garden">
+            <img src="static/img/Mhairi_pics/Y31A1141 lo res (2).jpg" alt="Mhairi-garden">
         </div>
         <div class="home-about-text">
             <p class="normal-text">
@@ -114,7 +114,7 @@
     <section class="home-coaching">
         <div class="coaching-1-1">
             <div class="coaching-img">
-                <img src="static/img/core-img/mhairi_garden.jpg" alt="mhairi_garden">
+                <img src="static/img/Mhairi_pics/Y31A1100 lo res.jpg" alt="mhairi_garden">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Who</h2>
@@ -131,7 +131,7 @@
         </div>
         <div class="coaching-free">
             <div class="coaching-img">
-                <img src="static/img/core-img/mhairi_laptop.jpg" alt="mhairi-laptop">
+                <img src="static/img/Mhairi_pics/Y31A0958 lo res (1).jpg" alt="mhairi-laptop">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">What</h2>
@@ -148,7 +148,7 @@
         </div>
         <div class="coaching-why">
             <div class="coaching-img">
-                <img src="static/img/core-img/in-air.jpeg" alt="Hands in air">
+                <img src="static/img/Mhairi_pics/Y31A1048 lo res.jpg" alt="Hands in air">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Why</h2>
