Update home hero text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="animate__animated animate__fadeInRight animate__delay-1s">the tiring hustle</p> -->
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">& break free to</p>
             <p class="logo-sub animate__animated animate__fadeInRight animate__delay-2s">your best life ever</p> -->
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">Now is the time</p>
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s">I'm here to help you</p>
             <p class="animate__animated animate__fadeInLeft animate__delay-1s">Release your power</p>
             <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">Live your purpose</p>
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p> -->
