--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 I worked for many years in senior roles with fancy job titles and amazing salaries, but I was never truly fulfilled.
             </p>
             <p class="normal-text">
-                After completing a Medical Biology degree I knew my passion lay out with the sciences/lab.  But what to do? Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success; impressive job title, six figure salary, nice car, you get the picture.  When I got there I realised I’d been so busy fitting into the mould of what each company needed me to be, I’d lost touch with MY true passion….helping people.
+                After completing a Medical Biology degree I knew my passion lay out with the lab.  But what to do? Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success; impressive title, six figure salary, nice car, you get the picture.  When I got there I realised I’d been so busy fitting into the mould of what each company needed me to be, I’d lost touch with my true passion….helping people.
             </p>
             <p class="normal-text">
-                What changed my world?  Disaster.  It was the best thing that happened to me.  Read more about my journey to (living my dream life and how I can help you live yours) geniune fulfilment and how I can help you with yours.
+                What changed my world?  Disaster.  It was the best thing that happened to me.  Read more about my journey to geniune fulfilment and how I can help you with yours.
             </p>
         </div>
         <div class="about-cta-btn">
