--- a/about.html
+++ b/about.html
@@ -68,10 +68,10 @@
         </div>
         <div class="about-hero-text">
             <div class="about-hero-content">
-                <h1 class="about-title">Hey Ya!</h1>
+                <h1 class="about-title">Hi Ya!</h1>
                 <h2 class="logo-2">I'm Mhairi Todd</h2>
                 <p class="sect-title about-text">
-                    I will help you discover your confidence, tap into your power and find success on your own terms                
+                    Discover your confidence, tap into your power and find success on your own terms                
                 </p>
             </div>
             
