--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
 
     <!-- hero section -->
     <section class="about-detail">
-        <h1 class="about-detail-title sect-title">I WENT FROM OUTWARDLY HAVING IT ALL BUT INWARDLY ANXIOUS & FULL OF SELF DOUBT TO…. <span class="fw-b">DIVORCED</span></h1>
-        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME.  I’D FAILED AT SOMETHING REALLY IMPORTANT. AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
+        <h1 class="about-detail-title sect-title">I WENT FROM OUTWARDLY HAVING IT ALL BUT INWARDLY ANXIOUS & FULL OF SELF DOUBT TO…<span class="fw-b">DIVORCED</span></h1>
+        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME. AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
         <hr class="pink-hr" data-aos="fade-slide-left">
         <div class="about-detail-content">
             <div class="first-col">
@@ -114,7 +114,9 @@
         <p class="about-detail-quote">
             So, that’s a nice story, but how does that help you? 
             Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
-            I also know that I can help you change all that and more. 
+            <p>
+                I also know that I can help you change all that and more. 
+            </p>
         </p>
     </section>
     <!-- END: hero section -->
