Mhairi content about

--- a/about.html
+++ b/about.html
@@ -131,49 +131,50 @@
         <div class="known-for-content">
             <div class="known-for-item">
                 <i class="fas fa-glass-cheers"></i>
-                <p class="known-for-text normal-text">Teaching women how to celebrate their success in non-traditional ways</p>
+                <p class="known-for-text normal-text">Teaching women that the power they seek lies within them </p>
             </div>
             <div class="known-for-item">
                 <i class="fas fa-graduation-cap"></i>
-                <p class="known-for-text normal-text">The many career paths i tried before this one. Can you say - designer/copywrighter</p>
+                <p class="known-for-text normal-text">DISC certified I uncover your unique personality profile, help unlock motivators, drivers and fear to maximise performance </p>
             </div>
             <div class="known-for-item">
                 <i class="fas fa-microphone-alt"></i>
-                <p class="known-for-text normal-text">Hosting a top-charting business podcast for women</p>
+                <p class="known-for-text normal-text">Writing short but inspirational Instagram posts to keep you inspired daily</p>
             </div>
             <div class="known-for-item">
                 <i class="fas fa-praying-hands"></i>
-                <p class="known-for-text normal-text">Helping people see into their own souls where often their mind is blocking them</p>
+                <p class="known-for-text normal-text">Being a lover of bubbles…the kind you can drink 
+                </p>
             </div>
         </div>
     </section>
 
     <!-- END:what I'm known for section -->
 
-    <!-- Parralex numbers section -->
-    <div class="numbers-parralax" data-parallax="scroll" data-image-src="static/img/bg-img/water-flowers.jpeg">
-        <section id="old-numbers" class="numbers-sect" >
-            <div class="numbers-content">
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide">50+</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide">Number of happy clients</h3>
-                </div>
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="200">6</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="200">Advanced coaching certifications</h3>
-                </div>
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="300">10</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="300">Number of educational events per year</h3>
-                </div>
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="400">3</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="400">Cups of tea per day</h3>
-                </div>
+    <!-- quiz section -->
+    <section class="quiz-section">
+        <h2 class="quiz-title sect-title">
+            The coaching  
+        </h2>
+        <h3 class="quiz-font logo-font">
+            quiz
+        </h3>
+        <div class="quiz-cta-content">
+            <h4 class="quiz-content-title sect-title">
+                Find out if coaching is for you in less than 60 seconds
+            </h4>
+            <!-- <p class="quiz-content-main normal-text">
+                Personal life coaching is not for everyone. There are some who would benefit from a 
+                life coach, but they aren't ready to make the changes necessary to better their lives. 
+                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
+            </p> -->
+            <div class="quiz-cta">
+                <a href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
             </div>
-        </section>
-    </div>
-    <!-- END: parralex numbers section -->   
+        </div>
+    </section>
+    <!-- END: quiz section -->
+   
 
     <!-- crazy about section -->
     <section class="crazy-about-sect">
@@ -188,11 +189,11 @@
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Little detail</p>
-                <p class="favourite-text">Fresh flowers</p>
+                <p class="favourite-text">A candle in every room</p>
             </div>
             <div class="crazy-about-text">
-                <p class="favourite-text fw-b">Currently</p>
-                <p class="favourite-text">Looking at this cutie everyday!</p>
+                <p class="favourite-text fw-b">My love</p>
+                <p class="favourite-text">This little bundle of cuteness and hilarity </p>
             </div>
             <div class="crazy-about-img">
                 <img src="static/img/core-img/baby.jpeg" alt="baby">
@@ -202,11 +203,11 @@
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Favourite accessory</p>
-                <p class="favourite-text">High heels</p>
+                <p class="favourite-text">Does Lipgloss count?</p>
             </div>
             <div class="crazy-about-text">
-                <p class="favourite-text fw-b">Drink of choice</p>
-                <p class="favourite-text">Red wine blend</p>
+                <p class="favourite-text fw-b">Trick</p>
+                <p class="favourite-text">Singing</p>
             </div>
             <div class="crazy-about-img">
                 <img src="static/img/core-img/woman-wine.jpeg" alt="woman-wine">
@@ -215,26 +216,27 @@
                 <img src="static/img/core-img/cake.jpeg" alt="cake">
             </div>
             <div class="crazy-about-text">
-                <p class="favourite-text fw-b">Dessert</p>
-                <p class="favourite-text">Carrot cake</p>
+                <p class="favourite-text fw-b">Treat</p>
+                <p class="favourite-text">Pumpkin spiced latte YUM!</p>
+                <!-- *this post was not sponsored by any coffee house ;-)</p> -->
             </div>
             <div class="crazy-about-text">
-                <p class="favourite-text fw-b">Always have</p>
-                <p class="favourite-text">A good book on hand</p>
+                <p class="favourite-text fw-b">Always find</p>
+                <p class="favourite-text">Laughter in every day </p>
             </div>
             <div class="crazy-about-img">
                 <img src="static/img/core-img/woman-book.jpeg" alt="woman-book">
             </div>
             <div class="crazy-about-text d-none d-md-block">
-                <p class="favourite-text fw-b">Favourite book</p>
-                <p class="favourite-text">Alice in wonderland</p>
+                <p class="favourite-text fw-b">Relax</p>
+                <p class="favourite-text">A hot bath</p>
             </div>
             <div class="crazy-about-img">
                 <img src="static/img/core-img/RuPaul_Image_Web.jpg" alt="">
             </div>
             <div class="crazy-about-text">
-                <p class="favourite-text fw-b">TV show</p>
-                <p class="favourite-text">Ru Pauls' Drag Race</p>
+                <p class="favourite-text fw-b">Recent Netlfix</p>
+                <p class="favourite-text">The Witcher, that hair!</p>
             </div>    
         </div>
     </section>
