Mhairi content about detail

--- a/about.html
+++ b/about.html
@@ -64,14 +64,14 @@
     <!-- hero section -->
     <section class="about-hero">
         <div class="about-hero-img">
-            <img src="static/img/core-img/woman-headphones.jpeg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/mhairi_front_flowers.jpg" alt="Woman with coffee">
         </div>
         <div class="about-hero-text">
             <div class="about-hero-content">
                 <h1 class="about-title">Hi Ya!</h1>
-                <h2 class="logo-2">I'm Mhairi Todd</h2>
+                <h2 class="logo-2">I'm Mhairi</h2>
                 <p class="sect-title about-text">
-                    Discover your confidence, tap into your power and find success on your own terms                
+                    Discover your confidence tap into your power and find success on your own terms                
                 </p>
             </div>
             
@@ -82,7 +82,7 @@
     <!-- hero section -->
     <section class="about-detail">
         <h1 class="about-detail-title sect-title">I WENT FROM OUTWARDLY HAVING IT ALL BUT INWARDLY ANXIOUS & FULL OF SELF DOUBT TO…<span class="fw-b">DIVORCED</span></h1>
-        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME. AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
+        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
         <hr class="pink-hr" data-aos="fade-slide-left">
         <div class="about-detail-content">
             <div class="first-col">
