Mhairi content testimonials

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <div class="header-logo d-none d-md-block">
             <a class="header-link" href="index.html">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-                <h2 class="logo-subtitle mb-0">Tranformation Coach</h2>
+                <h2 class="logo-subtitle mb-0">Life Transformation Coach</h2>
             </a>
         </div>
         <div class="toggle-header">
@@ -55,7 +55,7 @@
     <div class="logo-xs-container d-md-none">
         <div class="header-xs-logo">
             <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-            <h2 class="logo-subtitle">Tranformation Coach</h2>
+            <h2 class="logo-subtitle">Life Transformation Coach</h2>
         </div>
     </div>
     
@@ -114,9 +114,8 @@
         <p class="about-detail-quote">
             So, that’s a nice story, but how does that help you? 
             Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
-            <p>
-                I also know that I can help you change all that and more. 
-            </p>
+            <br>
+            <br>I also know that I can help you change all that and more. 
         </p>
     </section>
     <!-- END: hero section -->
@@ -244,7 +243,7 @@
     
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/Y31A1153 lo res (1).jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
