--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-logo d-none d-md-block">
             <a class="header-link" href="index.html">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-                <h2 class="logo-subtitle mb-0">Life Tranformation Coach</h2>
+                <h2 class="logo-subtitle mb-0">Life Transformation Coach</h2>
             </a>
         </div>
         <div class="toggle-header">
@@ -55,7 +55,7 @@
     <div class="logo-xs-container d-md-none">
         <div class="header-xs-logo">
             <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-            <h2 class="logo-subtitle">Life Tranformation Coach</h2>
+            <h2 class="logo-subtitle">Life Transformation Coach</h2>
         </div>
     </div>
     
