--- a/index.html
+++ b/index.html
@@ -223,44 +223,47 @@
     <!-- contact footer section -->
     <section class="contact-footer">
         <div class="cf-content">
-            <h3 class="sect-subtitle cf-title">
-                Follow me on Instagram for fun, free resources, wise words and inspiration. 
-            </h3>
-            <p class="normal-text">
-                Or pretty pictures at the very least! 
-            </p>
-            <div class="about-cta-btn cf-button">
-                <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
-            </div>
-        </div>
-
-        <!-- latest instagram posts -->
-        <div class="latest-posts">
-            <div class="latest-post-item">
-                <div class="latest-post-text">
-                    <h3 class="sect-subtitle">Latest Posts</h3>
-                    <div class="latest-post-ig">
-                        <i class="fab fa-instagram"></i>
+            <div class="ig-intro">
+                <div class="ig-intro-content">
+                    <h3 class="sect-subtitle cf-title">
+                        Follow me on Instagram for fun, free resources, wise words and inspiration. 
+                    </h3>
+                    <p class="normal-text">
+                        Or pretty pictures at the very least! 
+                    </p>
+                    <div class="about-cta-btn cf-button">
+                        <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
-            <div class="latest-post-item">
-                <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+            <!-- latest instagram posts -->
+            <div class="latest-posts">
+                <div class="latest-post-item">
+                    <div class="latest-post-text">
+                        <h3 class="sect-subtitle">Latest Posts</h3>
+                        <div class="latest-post-ig">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/mhairi_window.jpg" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/floor.jpg" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                </div>
             </div>
-            <div class="latest-post-item">
-                <img src="static/img/Mhairi_pics/mhairi_window.jpg" alt="">
-            </div>
-            <div class="latest-post-item">
-                <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
-            </div>
-            <div class="latest-post-item">
-                <img src="static/img/Mhairi_pics/floor.jpg" alt="">
-            </div>
-            <div class="latest-post-item">
-                <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
-            </div>
+            <!-- END: latest instagram posts -->
         </div>
-        <!-- END: latest instagram posts -->
 
         <!-- back to top md min-->
         <div class="back-to-top-md d-none d-md-block">
