Adjust margins on home md

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
             <div class="coaching-text">
                 <h2 class="coaching-title">Who</h2>
                 <p class="normal-text"> 
-                    I know what you’re thinking, is coaching really right for me?  And if so, is Mhairi is the ‘one’?  Mindreading abilities aside these are exactly the questions you should be asking.
-                </p>
-                <p class="normal-text">
+                    I know what you’re thinking, is coaching really right for me?  And if so, is Mhairi is the ‘one’?  Mindreading abilities aside these are exactly the questions you should be asking
                     Take my quick fire quiz to find out.  Spoiler alert, the fact that you are here means the answers are YES and YES.
                 </p>
                 <div class="coach-cta-btn">
@@ -137,8 +135,6 @@
                 <h2 class="coaching-title">What</h2>
                 <p class="normal-text p-md-0">  
                     So you’re all in on the idea of coaching but maybe you’ve had it before and it wasn’t quite the revelation it promised to be, or perhaps you’re new to coaching and have no idea what the journey would look like.                     
-                </p>
-                <p class="normal-text">
                     Read more about how the programs work and which package suits you.
                 </p>
                 <div class="coach-cta-btn">
@@ -154,7 +150,6 @@
                 <h2 class="coaching-title">Why</h2>
                 <p class="normal-text p-md-0">  
                     I’m here to make a fundamental difference in the life you led.  You need to know if that can really happen, right? 
-                    <p class="normal-text">
                         Read feedback from some of my wonderful clients and find out how you too can live the life you love.
                     </p>
                 </p>
