Add insta footer to all pages

--- a/about.html
+++ b/about.html
@@ -257,21 +257,52 @@
     </section>
     <!-- END: parralex services section -->
     
-    <!-- contact footer section -->
+    <!-- instagram footer -->
     <section class="contact-footer">
         <div class="cf-content">
-            <h3 class="sect-subtitle cf-title">
-                How to find margin in your schedule
-            </h3>
-            <p class="normal-text">
-                Get my free workbook to help you plan your week! This workbook 
-                guides you through my 3 step process to finding more time and 
-                stopping the mindless hustle.
-            </p>
-            <div class="about-cta-btn cf-button">
-                <a href="" class="btn-pink normal-text">Reach out now!</a>
+            <div class="ig-intro">
+                <div class="ig-intro-content">
+                    <h3 class="sect-subtitle cf-title">
+                        Follow me on Instagram for fun, free resources, wise words and inspiration. 
+                    </h3>
+                    <p class="normal-text">
+                        Or pretty pictures at the very least! 
+                    </p>
+                    <div class="about-cta-btn cf-button">
+                        <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
+                    </div>
+                </div>
             </div>
+            <!-- latest instagram posts -->
+            <div class="latest-posts">
+                <div class="latest-post-item">
+                    <div class="latest-post-text">
+                        <h3 class="sect-subtitle">Latest Posts</h3>
+                        <div class="latest-post-ig">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/mhairi_window.jpg" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/floor.jpg" alt="">
+                </div>
+                <div class="latest-post-item">
+                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                </div>
+            </div>
+            <!-- END: latest instagram posts -->
         </div>
+
+        <!-- END: instagram footer -->
 
         <!-- back to top md min-->
         <div class="back-to-top-md d-none d-md-block">
@@ -287,7 +318,7 @@
 
         <div class="cf-quick-links"></div>
     </section>
-    <!-- END: contact footer section -->
+    <!-- END: instagram footer section -->
 
     <!-- back to top mobile-->
     <div class="back-to-top-footer d-md-none">
