--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </section>
     <!-- END: parralex services section -->
 
-    <!-- contact footer section -->
+    <!-- instagram footer -->
     <section class="contact-footer">
         <div class="cf-content">
             <div class="ig-intro">
@@ -260,6 +260,8 @@
             <!-- END: latest instagram posts -->
         </div>
 
+        <!-- END: instagram footer -->
+
         <!-- back to top md min-->
         <div class="back-to-top-md d-none d-md-block">
             <a href="#header">
@@ -274,7 +276,7 @@
 
         <div class="cf-quick-links"></div>
     </section>
-    <!-- END: contact footer section -->
+    <!-- END: instagram footer section -->
 
     <!-- back to top mobile-->
     <div class="back-to-top-footer d-md-none">
