--- a/quiz.html
+++ b/quiz.html
@@ -63,11 +63,13 @@
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+                    <button class="circle-slide-btn">Previous</button>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                    <button class="circle-slide-btn">Next</button>
                     <span class="sr-only">Next</span>
                 </a>
             </div>   
