--- a/quiz.html
+++ b/quiz.html
@@ -9,31 +9,11 @@
 </head>
 <body>
 
-
-
-
-
-
     <div class="quiz-full-screen">
         <div class="quiz-content">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
                 <div class="carousel-inner">
-                    <div class="carousel-item quiz-intro-fs active">
-                        <h2 class="quiz-title-fs sect-title">
-                            The coaching personality<span class="logo-font span-logo-font">quiz</span>
-                        </h2>
-                        <div class="quiz-fs-text">
-                            <!-- <h4 class="quiz-content-title-fs sect-title">
-                                Find out what your website style is in less than 60 seconds! 
-                            </h4> -->
-                            <p class="quiz-content-main-fs normal-text">
-                                Coaching can be powerful, impactful and life-changing but only when you are ready and willing to commit to
-                                the process. Do you think you are ready? Find out below. Read each statement and answer honestly if the
-                                statement is true for you. 
-                            </p>
-                        </div>
-                    </div>
-                    <div class="carousel-item quiz-carousel-item">
+                    <div class="carousel-item quiz-carousel-item active">
                         <div class="quiz-item">
                             <!-- <div class="quiz-checkboxes">
                                 <input type="checkbox" name="3[]" value="3" class="checkbox"/>
@@ -62,16 +42,21 @@
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
-                    <button class="circle-slide-btn">Previous</button>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-                    <button class="circle-slide-btn">Next</button>
-                    <span class="sr-only">Next</span>
-                </a>
+                <div class="quiz-controls">
+                    <a class="carousel-control-prev carousel-control" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+                        <button class="circle-slide-btn">Prev</button>
+                        <span class="sr-only">Prev</span>
+                    </a>
+                    <div class="quiz-number">
+                        <p class="normal-text">1/10</p>
+                    </div>
+                    <a class="carousel-control-next carousel-control" href="#carouselExampleControls" role="button" data-slide="next">
+                        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                        <button class="circle-slide-btn">Next</button>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>   
         </div>
     </div>
