--- a/snippets/snippets.html
+++ b/snippets/snippets.html
@@ -113,3 +113,20 @@
         <label for="2[]" class="normal-text quiz-tf-label">False</label>
     </div>
 </div>
+
+<!-- quiz intro -->
+<div class="carousel-item quiz-intro-fs active">
+    <h2 class="quiz-title-fs sect-title">
+        The coaching personality<span class="logo-font span-logo-font">quiz</span>
+    </h2>
+    <div class="quiz-fs-text">
+        <!-- <h4 class="quiz-content-title-fs sect-title">
+            Find out what your website style is in less than 60 seconds! 
+        </h4> -->
+        <p class="quiz-content-main-fs normal-text">
+            Coaching can be powerful, impactful and life-changing but only when you are ready and willing to commit to
+            the process. Do you think you are ready? Find out below. Read each statement and answer honestly if the
+            statement is true for you. 
+        </p>
+    </div>
+</div>
